# oas/spec.json
@@ -491,6 +491,50 @@
         "tags": []
       }
     },
+    "/sadsd/asdsss/ssssddwww": {
+      "get": {
+        "summary": "/sadsd/asdsss/ssssddwww",
+        "consumes": [
+          "application/json"
+        ],
+        "parameters": [],
+        "responses": {},
+        "tags": []
+      }
+    },
+    "/sdasdvfsd/fdfsdfdsf/dsfddd": {
+      "get": {
+        "summary": "/sdasdvfsd/fdfsdfdsf/dsfddd",
+        "consumes": [
+          "application/json"
+        ],
+        "parameters": [],
+        "responses": {},
+        "tags": []
+      }
+    },
+    "/sadads/assss": {
+      "get": {
+        "summary": "/sadads/assss",
+        "consumes": [
+          "application/json"
+        ],
+        "parameters": [],
+        "responses": {},
+        "tags": []
+      }
+    },
+    "/chens/s8d": {
+      "get": {
+        "summary": "/chens/s8d",
+        "consumes": [
+          "application/json"
+        ],
+        "parameters": [],
+        "responses": {},
+        "tags": []
+      }
+    },
     "/kjhkj/qwe/sadd": {
       "get": {
         "summary": "/kjhkj/qwe/sadd",
